# ductionary

./: .gitignore  LICENSE  README.md  __init__.py  ductionary.py  pyproject.toml
