[tool.poetry]
name = "ductionary"
version = "0.0.1"
description = "A dictionary-derived object class to store items as attributes"
authors = ["M. Neset Cinar <nesetcinar@hotmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]
repository = "https://github.com/cinarn/ductionary"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.13"
numpy = "^1.21.5"
scipy = "^1.9.1"
json5 = "^0.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
